src/objects/LoggerSObjectHandlerParameter__mdt.object
<CustomObject>
    <description>Used to store additional key-value pair parameters that can be used by Logger SObject handlers</description>
    <fields>
        <fullName>CollectionType__c</fullName>
        <description>The expected collection type of the parameter. For example, String vs List&lt;String&gt;</description>
        <inlineHelpText>The expected collection type of the parameter. For example, String vs List&lt;String&gt;</inlineHelpText>
        <label>Collection Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                    <default>true</default>
                    <label>Single</label>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DataType__c</fullName>
        <description>The expected data type of the parameter value</description>
        <inlineHelpText>The expected data type of the parameter value</inlineHelpText>
        <label>Data Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Datetime</fullName>
                </value>
                <value>
                    <fullName>Decimal</fullName>
                </value>
                <value>
                    <fullName>Double</fullName>
                </value>
                <value>
                    <fullName>Id</fullName>
                </value>
                <value>
                    <fullName>Integer</fullName>
                </value>
                <value>
                    <fullName>Long</fullName>
                </value>
                <value>
                    <fullName>Object</fullName>
                </value>
                <value>
                    <fullName>SObject</fullName>
                </value>
                <value>
                    <fullName>String</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SObjectHandler__c</fullName>
        <label>SObject Handler</label>
        <referenceTo>LoggerSObjectHandler__mdt</referenceTo>
        <relationshipLabel>Logger SObject Handler Parameters</relationshipLabel>
        <relationshipName>LoggerSObjectHandlerParameters</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Logger SObject Handler Parameter</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>SObjectHandler__c</columns>
        <columns>IsEnabled__c</columns>
        <columns>CollectionType__c</columns>
        <columns>DataType__c</columns>
        <columns>Value__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllDisabled</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>SObjectHandler__c</columns>
        <columns>CollectionType__c</columns>
        <columns>DataType__c</columns>
        <columns>Value__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsEnabled__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Disabled</label>
    </listViews>
    <listViews>
        <fullName>AllEnabled</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>SObjectHandler__c</columns>
        <columns>CollectionType__c</columns>
        <columns>DataType__c</columns>
        <columns>Value__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsEnabled__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Enabled</label>
    </listViews>
    <pluralLabel>Logger SObject Handler Parameters</pluralLabel>
</CustomObject>